# cli

./: Cargo.toml  README.md
.openapi/flavours/axum/: config.toml
src/: cli.rs  config.rs  flavour.rs  lib.rs  main.rs  processor.rs  schema.rs
src/commands/: create.rs  init.rs  mod.rs  pull.rs  run.rs
