[package]
name = "oam"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89" }
clap = { version = "4.5.17", features = ["derive"] }
colored = "2.1.0"
rhai = "1.19.0"
serde = { version = "1.0.210", features = ["derive"]}
serde_yaml = { version = "0.9.33" }
tera = "1.20.0"
toml = "0.8.19"
wasmtime = "24.0.0"

[[bin]]
name = "oam"
path = "src/main.rs"
